@@ -10,7 +10,7 @@
 <meta property="og:title" content="{{ view.pagetitle }}">
 <meta property="og:description" content="{{ view.subtitle or '' }}">
 <meta property="og:url" content="{{ view.og_url }}">
-{% set image = get_image(view, view.context, fallback=False, default='wide') %}
+{% set image = get_variant(view.sharing_image, 'wide') if view.sharing_image else None %}
 {% if image -%}
 {% set source = request.image_host + image.path + '__1300x731' %}
 <meta property="og:image" content="{{ source }}">
