@@ -8,6 +8,9 @@ Change log for zeit.web
 
 - ZON-2393: Replace adlabel span by css content to improve ad reloading
 
+- ZON-2261: Use configured fallback sharing image for breaking news articles
+  that don't have an article image yet
+
 
 2.28 (2015-11-17)
 -----------------
